force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/dw_ecard_app_ecard_operation_log__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$ecard_operation_log</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$ecard_operation_log</externalName>
    <label>dw_ecard_app$ecard_operation_log</label>
    <pluralLabel>dw_ecard_app$ecard_operation_log</pluralLabel>
</CustomObject>