force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/assembly_updated_date__c.field-meta.xml
<CustomField>
    <fullName>assembly_updated_date__c</fullName>
    <description>assembly_updated_date</description>
    <externalDeveloperName>assembly_updated_date</externalDeveloperName>
    <label>assembly_updated_date</label>
    <type>DateTime</type>
</CustomField>