force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/assembly_updatedby_id__c.field-meta.xml
<CustomField>
    <fullName>assembly_updatedby_id__c</fullName>
    <description>assembly_updatedby_id</description>
    <externalDeveloperName>assembly_updatedby_id</externalDeveloperName>
    <label>assembly_updatedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>