force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/buildstation_id__c.field-meta.xml
<CustomField>
    <fullName>buildstation_id__c</fullName>
    <description>buildstation_id</description>
    <externalDeveloperName>buildstation_id</externalDeveloperName>
    <label>buildstation_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>