force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <description>created_date</description>
    <externalDeveloperName>created_date</externalDeveloperName>
    <label>created_date</label>
    <type>DateTime</type>
</CustomField>