force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/forman1_id__c.field-meta.xml
<CustomField>
    <fullName>forman1_id__c</fullName>
    <description>forman1_id</description>
    <externalDeveloperName>forman1_id</externalDeveloperName>
    <label>forman1_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>