force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/forman3_id__c.field-meta.xml
<CustomField>
    <fullName>forman3_id__c</fullName>
    <description>forman3_id</description>
    <externalDeveloperName>forman3_id</externalDeveloperName>
    <label>forman3_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>