force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/has_discrepancy__c.field-meta.xml
<CustomField>
    <fullName>has_discrepancy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_discrepancy</description>
    <externalDeveloperName>has_discrepancy</externalDeveloperName>
    <label>has_discrepancy</label>
    <type>Checkbox</type>
</CustomField>