force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/has_discrepancy_logged__c.field-meta.xml
<CustomField>
    <fullName>has_discrepancy_logged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_discrepancy_logged</description>
    <externalDeveloperName>has_discrepancy_logged</externalDeveloperName>
    <label>has_discrepancy_logged</label>
    <type>Checkbox</type>
</CustomField>