force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/has_operation_check__c.field-meta.xml
<CustomField>
    <fullName>has_operation_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has_operation_check</description>
    <externalDeveloperName>has_operation_check</externalDeveloperName>
    <label>has_operation_check</label>
    <type>Checkbox</type>
</CustomField>