force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/qc_approvedby_id__c.field-meta.xml
<CustomField>
    <fullName>qc_approvedby_id__c</fullName>
    <description>qc_approvedby_id</description>
    <externalDeveloperName>qc_approvedby_id</externalDeveloperName>
    <label>qc_approvedby_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>