force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/qc_updated_date__c.field-meta.xml
<CustomField>
    <fullName>qc_updated_date__c</fullName>
    <description>qc_updated_date</description>
    <externalDeveloperName>qc_updated_date</externalDeveloperName>
    <label>qc_updated_date</label>
    <type>DateTime</type>
</CustomField>