force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>status</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>