force-app/main/default/objects/dw_ecard_app_ecard_operation_log__x/fields/validation_pic_required__c.field-meta.xml
<CustomField>
    <fullName>validation_pic_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>validation_pic_required</description>
    <externalDeveloperName>validation_pic_required</externalDeveloperName>
    <label>validation_pic_required</label>
    <type>Checkbox</type>
</CustomField>